--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -16,7 +16,7 @@ jobs:
 
     steps:
     - name: Install Dependencies
-      run: sudo apt-get update && sudo apt-get install -y meson libglib2.0-dev libgtk-4-dev libadwaita-1-dev systemd polkit cargo appstream-util
+      run: sudo apt-get update && sudo apt-get install -y meson libglib2.0-dev libgtk-4-dev libadwaita-1-dev systemd polkit cargo appstream-util gettext desktop-file-utils
     - uses: actions/checkout@v3
     - name: Build
       run: meson . build --prefix=/usr/local
